add mean data api
